gitlab/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.storage.mount.gitlab
                    operator: In
                    values:
                      - "true"
      # TODO: InitContainer для secrets.json и trusted-certs
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:19.4.0-ce.0
          ports:
            - containerPort: 80
              name: http
            - containerPort: 22
              name: ssh
          volumeMounts:
            - name: data
              mountPath: /var/opt/gitlab
            - name: config
              mountPath: /etc/gitlab
            - name: backup
              mountPath: /mnt/backups
            - name: registry
              mountPath: /mnt/registry
            - name: logs
              mountPath: /var/log/gitlab
            - name: dshm
              mountPath: /dev/shm
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 4
              memory: 12Gi

          readinessProbe:
            httpGet:
              path: /-/health
              port: http
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30

          livenessProbe:
            httpGet:
              path: /-/health
              port: http
            initialDelaySeconds: 180
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 50

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitlab-data-pvc
        - name: config
          persistentVolumeClaim:
            claimName: gitlab-config-pvc
        - name: backup
          persistentVolumeClaim:
            claimName: gitlab-backup-pvc
        - name: registry
          persistentVolumeClaim:
            claimName: gitlab-registry-pvc
        - name: logs
          persistentVolumeClaim:
            claimName: gitlab-logs-pvc
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
