gitlab/service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh
  namespace: gitlab
spec:
  selector:
    app: gitlab
  ports:
  - name: ssh
    protocol: TCP
    port: 22
    targetPort: 22
  type: ClusterIP
